fix too long url

--- a/app/css/browser/browser-tab-url-field.styl
+++ b/app/css/browser/browser-tab-url-field.styl
@@ -54,6 +54,7 @@
 }
 .tab-toolbar-url {
   flex: 1;
+  overflow: hidden;
 }
 .tab-toolbar-url input {
   width: 100%;
